# AGENTIC_DOC

agentic-document-extraction-demo/: .env.template  .gitignore  README.md  app.py  environment.yml  extract.py  extracted_data.json  generate_code.py  pyproject.toml
